* Thu Sep 07 2023 Steven Pritchard <steve@sicura.us> - 7.8.0
- Add AlmaLinux 8 support

* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.7.0
- Add RockyLinux 8 support

* Thu Jun 17 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.6.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Wed Jan 20 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.5.0
- Add puppet 7 support
- Fix sysctl updates on service restart

* Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.5.0
- Removed EL6 support

* Fri Apr 10 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.4.0-0
- Add EL8 support
- The following dependencies are now optional
  - simp/haveged
  - simp/iptables
  - simp/pki
  - simp/tcpwrappers
- Updated acceptance tests to use lftp in TLS mode and fixed SELinux issues
- Updated the README

* Tue Jun 04 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 7.3.0-0
- Add v2 compliance_markup data

* Wed Apr 10 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 7.2.1-0
- Fixed ordering issue between the kernel module loading for
  iptables and the service being started
- Updated tests in support of puppet6, and removed puppet4 support

* Mon Oct 29 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.2.1-0
- Fixed a bad URL in the README.md

* Mon Oct 29 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.2.0-0
- Updated badges and contribution guide URL in README.md

* Thu Sep 13 2018 Nick Miller <Nick.miller@onyxpoint.com> - 7.2.0-0
- Added support for Puppet 5
- Added reference.md
- Moved user/group management to it's own manifest, allowing for easier
  ordering
- Added $package_ensure parameter
  - Changed the package from 'latest' to 'installed'
  - It will also respect `simp_options::package_ensure`
- Added some OEL content but not declaring support for it yet

* Tue Sep 11 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 7.2.0-0