@@ -1,6 +1,6 @@
 {
   "name": "simp-vsftpd",
-  "version": "7.8.0",
+  "version": "7.9.0",
   "author": "SIMP Team",
   "summary": "Manage vsftpd",
   "license": "Apache-2.0",
@@ -19,30 +19,30 @@
   "dependencies": [
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.1.0 < 5.0.0"
+      "version_requirement": ">= 4.9.0 < 5.0.0"
     },
     {
       "name": "puppetlabs/stdlib",
-      "version_requirement": ">= 8.0.0 < 9.0.0"
+      "version_requirement": ">= 8.0.0 < 10.0.0"
     }
   ],
   "simp": {
     "optional_dependencies": [
       {
         "name": "simp/haveged",
-        "version_requirement": ">= 0.3.2 < 1.0.0"
+        "version_requirement": ">= 0.4.5 < 1.0.0"
       },
       {
         "name": "simp/iptables",
-        "version_requirement": ">= 6.0.0 < 7.0.0"
+        "version_requirement": ">= 6.5.3 < 7.0.0"
       },
       {
         "name": "simp/pki",
-        "version_requirement": ">= 6.0.0 < 7.0.0"
+        "version_requirement": ">= 6.2.0 < 7.0.0"
       },
       {
         "name": "simp/tcpwrappers",
-        "version_requirement": ">= 6.0.0 < 7.0.0"
+        "version_requirement": ">= 6.2.0 < 7.0.0"
       }
     ]
   },
@@ -84,7 +84,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 6.22.1 < 8.0.0"
+      "version_requirement": ">= 7.0.0 < 9.0.0"
     }
   ]
 }
